[project]
name = "customer-support-openenv"
version = "0.1.0"
description = "OpenEnv RL environment for customer support ticket resolution"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "openai",
    "requests",
    "python-dotenv"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"